# my_little_cardgame

./: .copilot-instructions.md  .editorconfig  .gitignore  .pre-commit-config.yaml  .suggestions-vision-roadmap.md.swp  AUDIT_FINDINGS.md  AUDIT_ISSUES.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  STEP_5_SUMMARY.md  final_vision.md  suggestions-issue7-token-lifecycle.md  suggestions-vision-roadmap.md  vision-roadmap-suggestions.md  vision_suggest.md
.copilot/: permissions.yaml
.github/: .copilot-instructions.md.swp  copilot-instructions.md
docks/: current_state.md  roadmap.md  vision.md
docs/: full_github_actionlog.txt  issues.md
examples/: README.md  api_examples.sh
issues/: 0001_refactor-resolve-apply-effects.md  0002_actionlog-mutex.md  0003_add-deck-tests.md  0006_cargo-audit-triage.md
scripts/: check_all.sh  check_clippy.sh  check_coverage.sh  check_fmt.sh  install-hooks.sh
src/: actions_log.rs  deck_unit_tests.rs  lib.rs  library.rs  main.rs  player_data.rs  player_seed.rs  player_tokens.rs  status_messages.rs  tests.rs
tests/: action_integration.rs  action_log_async_stress.rs  action_log_concurrency.rs  action_log_persistence.rs  actions_log_replay.rs  api_end_to_end.rs  api_tests.rs  area_deck_e2e.rs  area_deck_integration.rs  combat_determinism.rs  combat_interleaved.rs  concurrency_stress.rs  coverage_integration.rs  encounter_loop_e2e.rs  flow_tests.rs  library_coverage.rs  library_integration.rs  library_unit.rs  persistence_tests.rs  proptest_replay.proptest-regressions  proptest_replay.rs  proptest_sequences.proptest-regressions  (+4 more)
(+26 files in other folders)
