[package]
name = "my-little-cardgame"
version = "0.1.0"
edition = "2021"
authors = ["RobbingDaHood"]
description = "A card game where everything is a deck"
license = "Apache-2.0"
repository = "https://github.com/RobbingDaHood/my_little_cardgame"

[dependencies]
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
schemars = "0.8"
okapi = "0.7.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = "1.0"
either = "1.15"
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
